Part of Daria's frontend changes

--- a/ContactTracing15/Pages/Index.cshtml
+++ b/ContactTracing15/Pages/Index.cshtml
@@ -5,7 +5,12 @@
 }
 
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Please stay at home :)</p>
+<div class="jumbotron jumbotron-fluid" style="        background-image: url(https://miro.medium.com/max/2978/1*rmq7bd3GFjcwfXtkrBQaPQ.png);
+        height: 100vh;">
+    <div class="container">
+        <div class="text-center">
+            <h1 class="display-4">Welcome</h1>
+            <p>Please stay at home :)</p>
+        </div>
+    </div>
 </div>
