--- a/ContactTracing15/Pages/Testing/PositiveForm.cshtml
+++ b/ContactTracing15/Pages/Testing/PositiveForm.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Positive Case Form";
 }
 
+<a class="btn btn-outline-secondary" id="return-button" asp-area="" asp-page="./Dashboard" style="margin:10px;">Back</a>
+
 <form method="post">
     <input asp-for="CaseForm.TesterId" />
     <input asp-for="CaseForm.TestingCentrePostcode" />
