Add ViewData["Title"] to pages where it is missing

--- a/ContactTracing15/Pages/GovAgent/TracingCentreSummary.cshtml
+++ b/ContactTracing15/Pages/GovAgent/TracingCentreSummary.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model ContactTracing15.Pages.GovAgent.TracingCentreSummaryModel
 @{
+    ViewData["Title"] = "Tracing Centre Summary";
 }
 
 <style>
