Fixed bug with contacts duplicating when edited

--- a/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
@@ -11,6 +11,7 @@
     <p>
         <form method="post">
             <input asp-for="AddContactForm.CaseId" value="@Model.AddContactForm.CaseId" />
+            <input asp-for="AddContactForm.ContactId" value="@Model.AddContactForm.ContactId" />
             <div class="row">
                 <div class="col-10">
                     <ul class="PositiveFormList" data-role="listview">
