--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -84,6 +84,13 @@
     });
 </script>
 
+<script>
+    function startDownload () {
+        document.getElementById('downloadForm').submit();
+        console.log("started download");
+    }
+</script>
+
 <h1>Dashboard</h1>
 
 <div class="row" id="statCardDeck">
@@ -103,10 +110,13 @@
             </div>
         </div>
         <div class="card pressableCard" id="statCard" style="margin:10px; background: #90ADB8;">
+            
             <div class="card-body">
                 <h3>Download Data</h3>
                 <p class="subtitle">Download a csv file of contact tracing data</p>
-                <a asp-page="/GovAgent/GovHome" class="stretched-link"></a>
+                <form asp-page-handler="DownloadDatabase" method="post" id="downloadForm">
+                </form>
+                <a href="#" onclick="startDownload(); return false;" class="stretched-link"></a>
             </div>
         </div>
 
