--- a/ContactTracing15/Pages/GovAgent/GovHome.cshtml
+++ b/ContactTracing15/Pages/GovAgent/GovHome.cshtml
@@ -84,12 +84,8 @@
     });
 </script>
 
-<script>
-    function startDownload () {
-        document.getElementById('downloadForm').submit();
-        console.log("started download");
-    }
-</script>
+
+
 
 <h1>Dashboard</h1>
 
@@ -114,9 +110,8 @@
             <div class="card-body">
                 <h3>Download Data</h3>
                 <p class="subtitle">Download a csv file of contact tracing data</p>
-                <form asp-page-handler="DownloadDatabase" method="post" id="downloadForm">
-                </form>
-                <a href="#" onclick="startDownload(); return false;" class="stretched-link"></a>
+                <a href="@Url.Page("GovHome", "Download")" class="stretched-link"></a>
+                
             </div>
         </div>
 
