rewording confirmation popups

--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -61,7 +61,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure? This action is irreversible and will result in the listed contacts of the case being automatically emailed.</p>
+                        <p>Are you sure? Only close a case if all of their contacts have been identified and had contact information listed. This action is irreversible.</p>
                     </div>
                     <div class="modal-footer">
                         <a class="btn btn-outline-secondary" data-dismiss="modal" role="button"> Cancel</a>
@@ -79,7 +79,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure? This action is irreversible and will result this case being dropped from your workload.</p>
+                        <p>Are you sure? Will assign this case to a different tracer, any contacts already listed will be kept. This action is irreversible.</p>
                     </div>
                     <div class="modal-footer">
                         <a class="btn btn-outline-secondary" data-dismiss="modal" role="button"> Cancel</a>
