--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -39,6 +39,7 @@
                         @contact.Info
                         <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-editcontactid="@contact.ContactId">edit </a>
                         <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-deletecontactid="@contact.ContactId">delete</a>
+                        <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-manualmarkcontactid="@contact.ContactId"> @contact.MarkUnmark</a>
                     </li>
                     }
                 </ul>
@@ -65,7 +66,7 @@
                     </div>
                     <div class="modal-footer">
                         <a class="btn btn-outline-secondary" data-dismiss="modal" role="button"> Cancel</a>
-                        <a asp-page="./Dashboard" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Close case</a>
+                        <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-completecaseid="@Model.CurrentAssignedCase.CaseID" class="btn btn-danger rounded-0" role="button"> Close case</a>
                     </div>
                 </div>
             </div>
