--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -9,6 +9,12 @@
     @await Html.PartialAsync("_AssignedCases", Model.CaseListItems)
 </div>
 <div class="rhs">
+    @if (Model.CloseFailed) 
+    {
+        <div>
+            Please manually contact and mark all contacts without email addresses before closing case.
+        </div>
+    }
     @if (Model.HasCurrentAssignedCase)
     {
         <div class="container" style="background: #F2F2F2; border: 1px solid #cecece; float: right; width: 60%">
