--- a/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
@@ -47,7 +47,9 @@
                     </ul>
                 </div>
             </div>
-            <button class="btn btn-danger submit-button rounded-0">Submit</button>
+            <div class="text-center">
+                <button class="btn btn-danger submit-button rounded-0">Submit</button>
+            </div>
         </form>
     </p>
     <p>
