more front end changes

--- a/ContactTracing15/Pages/Testing/PositiveForm.cshtml
+++ b/ContactTracing15/Pages/Testing/PositiveForm.cshtml
@@ -16,7 +16,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Name</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Name(*)</span>
                             </div>
 
                             <input asp-for="CaseForm.Forename" class="form-control form-control-sm" placeholder="first name">
@@ -30,7 +30,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Email</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Email</span>
                             </div>
 
                             <input asp-for="CaseForm.Email" class="form-control form-control-sm">
@@ -42,7 +42,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Phone Number</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Phone Number</span>
                             </div>
 
                             <input asp-for="CaseForm.Phone" class="form-control form-control-sm" />
@@ -54,7 +54,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Secondary Phone</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Secondary Phone</span>
                             </div>
 
                             <input asp-for="CaseForm.Phone2" class="form-control form-control-sm" />
@@ -66,7 +66,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Test Date</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Test Date(*)</span>
                             </div>
 
                             <input type="date" asp-for="CaseForm.TestDate" class="form-control form-control-sm" />
@@ -78,7 +78,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Symptoms Start Date</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Symptoms Start Date</span>
                             </div>
 
                             <input type="date" asp-for="CaseForm.SymptomDate" class="form-control form-control-sm" />
@@ -89,7 +89,7 @@
                     <div></div>
                     <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text">Truncated Postcode</span>
+                            <span class="input-group-text" style="width: 200px; text-align: center">Truncated Postcode</span>
                         </div>
 
                         <input asp-for="CaseForm.Postcode" class="form-control form-control-sm" />
