--- a/ContactTracing15/Pages/Tracing/Dashboard.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard.cshtml
@@ -36,14 +36,19 @@
                 <ul>
                     @foreach (var contact in Model.CurrentAssignedCase.contacts)
                     {
-                        <li>
-                            @contact.Info
-                            <div class="btn-group" role="group">
-                                <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-editcontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE">edit </a>
-                                <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-deletecontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE">delete</a>
-                                <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-manualmarkcontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE"> @contact.MarkUnmark</a>
-                            </div>
-                        </li>
+                    <li>
+                        @if (@contact.MarkUnmark == "mark")
+                        {
+                        <div>@contact.Info</div>
+                        }
+                        else {<div class="text-info">@contact.Info</div>} 
+
+                        <div class="btn-group" role="group">
+                            <a asp-page="./Dashboard_Edit" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-editcontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE">edit </a>
+                            <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-deletecontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE">delete</a>
+                            <a asp-page="./Dashboard" asp-route-caseid="@Model.CurrentAssignedCase.CaseID" asp-route-manualmarkcontactid="@contact.ContactId" class="btn btn-sm rounded-0" role="button" style="background: #DEDEDE"> @contact.MarkUnmark</a>
+                        </div>
+                    </li>
                     }
                 </ul>
             </div>
