--- a/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
+++ b/ContactTracing15/Pages/Tracing/Dashboard_Edit.cshtml
@@ -18,7 +18,7 @@
                         Please complete the form with the details of a contact.
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Name</span>
+                                <span class="input-group-text">Name(*)</span>
                             </div>
 
                             <input asp-for="AddContactForm.Forename" class="form-control" placeholder="first name">
