--- a/ContactTracing15/Pages/GovAgent/HeatmapPage.cshtml
+++ b/ContactTracing15/Pages/GovAgent/HeatmapPage.cshtml
@@ -56,10 +56,11 @@
 <script src="@Model.googleUrl"></script>
 
 <script id="initialise_script">
-    // Adding 500 Data Points
+
     var map, pointarray, heatmap;
 
 
+    // Get latitude and longitude data from the PageModel and put it in a javascript array
     function setUpData() {
 
         var lats = @Html.Raw(Json.Serialize(Model.Lats));
@@ -78,6 +79,7 @@
 
     }
 
+    // Initialise the heatmap with data
     function initialize() {
 
         var heatData = setUpData();
@@ -107,16 +109,19 @@
         autoSetRadius();
     }
 
+    // Automatically set the radius of heatmap spots dependent on the zoom level of the map
     function autoSetRadius() {
         zoomLevel = map.getZoom();
         radius = 2**(zoomLevel-4);
         heatmap.set('radius', radius);
     }
 
+    // Toggle heatmap on or off
     function toggleHeatmap() {
         heatmap.setMap(heatmap.getMap() ? null : map);
     }
 
+    // Toggle colour gradient from red-green to blue-red
     function changeGradient() {
         var gradient = [
             'rgba(0, 255, 255, 0)',
@@ -137,12 +142,10 @@
         heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
     }
 
+
     function changeOpacity() {
         heatmap.set('opacity', heatmap.get('opacity') ? null : 0.2);
     }
-
-
-
 
     google.maps.event.addDomListener(window, 'load', initialize);
 
