--- a/ContactTracing15/Pages/Index.cshtml
+++ b/ContactTracing15/Pages/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="text-center">
             <h1 class="display-4">Welcome</h1>
-            <p>Please check <a href="https://www.gov.uk/coronavirus">the Goverment's website</a> to learn more about the covid regulations in your area!</p>
+            <p>Please check <a href="https://www.gov.uk/coronavirus">the Government's website</a> to learn more about the covid regulations in your area!</p>
         </div>
     </div>
 </div>
