--- a/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
+++ b/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
@@ -15,7 +15,7 @@
     <table class="table table-hover table-sm">
         <thead style="background: #90ADB8">
             <tr>
-                <th scope="col" style="text-align: center; font-size: 18px">Case Names</th>
+                <th scope="col" style="text-align: center; font-size: 18px">Open Cases</th>
             </tr>
         </thead>
         <tbody>
@@ -34,7 +34,7 @@ else {
 <table class="table table-sm">
     <thead style="background: #90ADB8">
         <tr>
-            <th scope="col" style="text-align: center; font-size: 18px">Case Names</th>
+            <th scope="col" style="text-align: center; font-size: 18px">Open Cases</th>
         </tr>
     </thead>
     <tbody>
