--- a/ContactTracing15/Pages/Testing/PositiveForm.cshtml
+++ b/ContactTracing15/Pages/Testing/PositiveForm.cshtml
@@ -16,11 +16,11 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" style="width: 200px; text-align: center">Name(*)</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Name *</span>
                             </div>
 
-                            <input asp-for="CaseForm.Forename" class="form-control form-control-sm" placeholder="first name">
-                            <input asp-for="CaseForm.Surname" class="form-control form-control-sm" placeholder="last name">
+                            <input asp-for="CaseForm.Forename" class="form-control form-control-sm" placeholder="First name">
+                            <input asp-for="CaseForm.Surname" class="form-control form-control-sm" placeholder="Last name">
                         </div>
 
                         <span asp-validation-for="CaseForm.Forename"></span>
@@ -66,7 +66,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" style="width: 200px; text-align: center">Test Date(*)</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Test Date *</span>
                             </div>
 
                             <input type="date" asp-for="CaseForm.TestDate" class="form-control form-control-sm" />
@@ -78,7 +78,7 @@
                     <div>
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" style="width: 200px; text-align: center">Symptoms Start Date</span>
+                                <span class="input-group-text" style="width: 200px; text-align: center">Symptom Start Date</span>
                             </div>
 
                             <input type="date" asp-for="CaseForm.SymptomDate" class="form-control form-control-sm" />
