Editing demo text

--- a/ContactTracing15/Pages/Demo.cshtml
+++ b/ContactTracing15/Pages/Demo.cshtml
@@ -15,7 +15,7 @@
 
 <h3>Contact Tracers</h3>
 <p>Once you've added a new case, you should see it appear on the contact tracer's dashboard. A contact tracer would then be expected to phone/email each case and then fill in who they've been close to in the last few days. These "contacts" of a case are then either contacted manually by phone, or automatically by email. (Don't worry, we've turned off the sending of emails for this demo!)</p>
-<p>Be aware that any changes you make will be visible to all others using the demo (as everyone is logged in with the same username for this demo).</p>
+<p>Be aware that any changes you make will be visible to all others using the demo, so please don't submit or drop cases other than your own.</p>
 <p>Tracer username: <b>"tracer2@123.com"</b>       Password: <b>"dummypassword"</b></p>
 
 <h3>Government actors</h3>
