tried making the table scrollable, nothing changed

--- a/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
+++ b/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
@@ -12,6 +12,8 @@
         }
     </ul>
     */
+    
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
     <table class="table table-hover table-sm">
         <thead style="background: #90ADB8">
             <tr>
@@ -23,26 +25,29 @@
             {
                 <tr @if (assignedCase.IsActive) { <text> style="background-color: #DEDEDE" </text> }>
                     <td>
-                        <a asp-page="./Dashboard" , asp-route-caseid="@assignedCase.CaseID" class="btn btn-block btn-sm" style="background-color:transparent" >@Html.DisplayFor(m => assignedCase.Name)</a>
+                        <a asp-page="./Dashboard" , asp-route-caseid="@assignedCase.CaseID" class="btn btn-block btn-sm" style="background-color:transparent">@Html.DisplayFor(m => assignedCase.Name)</a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
+</div>
+   
 }
-else {
-<table class="table table-sm">
-    <thead style="background: #90ADB8">
-        <tr>
-            <th scope="col" style="text-align: center; font-size: 18px">Open Cases</th>
-        </tr>
-    </thead>
-    <tbody>
+else
+{
+    <table class="table table-sm">
+        <thead style="background: #90ADB8">
+            <tr>
+                <th scope="col" style="text-align: center; font-size: 18px">Open Cases</th>
+            </tr>
+        </thead>
+        <tbody>
             <tr>
                 <td>
                     You have no more assigned cases right now :)
                 </td>
             </tr>
-    </tbody>
-</table>
+        </tbody>
+    </table>
 }  
