--- a/ContactTracing15/wwwroot/css/site.css
+++ b/ContactTracing15/wwwroot/css/site.css
@@ -62,6 +62,17 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+.my-custom-scrollbar {
+    position: relative;
+    height: 200px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
