--- a/ContactTracing15/Pages/Index.cshtml
+++ b/ContactTracing15/Pages/Index.cshtml
@@ -9,10 +9,8 @@
         height: 100vh;">
     <div class="container">
         <div class="text-center">
-            <h1 class="display-4">Welcome</h1>
-            <p>Please check <a href="https://www.gov.uk/coronavirus">the Government's website</a> to learn more about the coronavirus regulations in your area.</p>
-
-
+            <h5 class="display-4">Demonstration Wed 12th May</h5>
+            <p>For demonstration purposes please click the <a  asp-area="" asp-page="/Demo">Demo info</a> tab above for instructions.</p>
 
         </div>
     </div>
