--- a/ContactTracing15/Pages/Demo.cshtml
+++ b/ContactTracing15/Pages/Demo.cshtml
@@ -5,8 +5,9 @@
 }
 
 <h1>For demonstration purposes on Wed 12th May</h1>
-<p>This website serves testers, contact tracers and government actors. All of this functionality can be reached through the <b>sign-in button</b> at the top-right.</p>
-<p>We suggest that you sign in first as a tester, then a tracer, and lastly a government actor.</p>
+<p>This website serves as a integrated platform for the contact tracing process, where testers upload test results, contact tracers work on cases and government actors analyse data. </p>
+<p>All of the website functionality can be reached through the <b>sign-in button</b> at the top-right.</p>
+<p>We suggest that you sign in first as a tester, then a tracer, and lastly a government actor to see the full story of a case going through our system.</p>
 
 <h3>Testers</h3>
 <p>Tester users fill in the details of a positive case they've just performed. Try adding a new case!</p>
