--- a/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
+++ b/ContactTracing15/Pages/Tracing/_AssignedCases.cshtml
@@ -37,7 +37,7 @@
 
 @if (Model.HasAssignedCases)
 {
-    <table class="table table-hover table-sm">
+    <table class="table table-hover table-sm header-fixed">
         <thead style="background: #90ADB8">
             <tr>
                 <th scope="col" style="text-align: center; font-size: 18px">Open Cases</th>
